--- a/pom.xml
+++ b/pom.xml
@@ -35,8 +35,7 @@
       <artifactId>automata-core</artifactId>
       <version>0.7.1</version>
     </dependency>
-    
-    <!-- The library is provided at http://www.alexander-merz.com/graphviz/ -->
+    <!-- The library is available at http://www.alexander-merz.com/graphviz/ -->
     <dependency>
     	<groupId>com.alexmerz.graphviz</groupId>
     	<artifactId>graphviz</artifactId>
