Added version of dot-parser which supports 0.6.0

--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
 
   <groupId>com.pfg666.dotparser</groupId>
   <artifactId>dot-parser</artifactId>
-  <version>0.2.2</version>
+  <version>0.2.2-0.6.0</version>
 
 	<name>dot-parser</name>
 	<url>https://github.com/pfg666/dot-parser</url>
@@ -28,7 +28,7 @@
 		<dependency>
 			<groupId>net.automatalib</groupId>
 			<artifactId>automata-core</artifactId>
-			<version>0.8.0</version>
+			<version>0.6.0</version>
 		</dependency>
 		<!-- The library is available at http://www.alexander-merz.com/graphviz/ -->
 		<dependency>
